force-app/main/default/objects/Marketing__c/fields/Gift_1_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_1_Send_Date__c</fullName>
    <label>Pre-Approval Box Send Date</label>
    <type>Date</type>
</CustomField>