force-app/main/default/objects/Marketing__c/fields/Gift_2_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_2_Send_Date__c</fullName>
    <label>Under Contract Box Send Date</label>
    <type>Date</type>
</CustomField>