force-app/main/default/objects/Marketing__c/fields/Gift_2_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_2_Send_Status__c</fullName>
    <label>Under Contract Box Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gift_Send_Status</valueSetName>
    </valueSet>
</CustomField>