force-app/main/default/objects/Marketing__c/fields/Gift_3_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_3_Send_Date__c</fullName>
    <label>Closing Box Send Date</label>
    <type>Date</type>
</CustomField>