force-app/main/default/objects/Marketing__c/fields/Gift_3_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_3_Send_Status__c</fullName>
    <label>Closing Box Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gift_Send_Status</valueSetName>
    </valueSet>
</CustomField>